gcc/testsuite/gdc.test/compilable/obsolete_body.d
/* REQUIRED_ARGS: -w
*/

void test()
in { } body { }
